# BmadDash

./: package-lock.json  package.json
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml  codex.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/: architecture.md  component-inventory.md  development-guide.md  index.md  project-context.md  project-scan-report.json  source-tree-analysis.md
docs/analysis/: brainstorming-session-2026-01-22.md
docs/planning-artifacts/: architecture.md  bmm-workflow-status.yaml  prd.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  watcher.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/parser/: mod.rs
src/components/dashboard/: Dashboard.tsx  EmptyState.tsx  ProjectCard.tsx
src/components/dialogs/: SelectBmadDocsDialog.tsx
src/components/documents/: DocumentEditor.tsx
src/components/kanban/: KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx
src/components/layout/: Sidebar.tsx
src/components/timeline/: TimelineView.tsx
src/hooks/: useTauri.ts
src/stores/: projectStore.ts
src/types/: bmad.ts  index.ts
